--- a/src/menu.css
+++ b/src/menu.css
@@ -73,7 +73,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;   
+  height: 100%; 
   /*background: #000;*/   
 }
 
@@ -84,6 +84,7 @@
   left: 0;
   width: 100%;
   /*color: #fff;*/
+  overflow: hidden;
 }
 
 .ve-menu-mobile li {
